# Gemetry-Trash

./: .gitattributes  CMakeLists.txt  README.md  about.md  mod.json
data/: mods.list.json  mods.list.v3.json
resources/files/: _loc.json
resources/spritesheets/GJ_GameSheet02/news/: edit_ePlayerControlExtBtn_001.png.kra
src/: CCSpriteSets.cpp  GlobedServerIntegration.cpp  Links.cpp  Resources.cpp  TextReplaces.cpp  _ImGui.hpp  _main.cpp  _main.hpp  dialogs.hpp  download_mods.hpp  globed.hpp  icons_ext.hpp  links.hpp  resources.hpp  settings.hpp  special_sprites.hpp
src/libs/Gif/: CacheGif.cpp  CacheGif.h  GifBase.cpp  GifBase.h  GifMovie.cpp  InstantGif.cpp  Movie.cpp  Movie.h
src/random_shit/: GameObjects.cpp  GameRuinify.cpp  LoadingLayerRuinify.cpp  MenuItems.cpp  MenuLayerRuinify.cpp  NX_vcjZmQ9w.hpp  PopupRandomMeme.hpp  SoggyPop.hpp  game_ruinify.hpp  loadinglayer_ruinify.hpp  menuitems.hpp  menulayer_ruinify.hpp
